added alerts and btns

--- a/index9_btns.html
+++ b/index9_btns.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <title>Document</title>
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.css"
     />
+
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -56,6 +58,23 @@
         </ul>
       </div>
     </nav>
+
+    <div class="alert alert-primary">primary</div>
+    <div class="alert alert-secondary">secondary</div>
+    <div class="alert alert-success">Success!!!</div>
+    <div class="alert alert-danger">danger</div>
+    <div class="alert alert-warning">warning</div>
+
+    <button class="btn btn-primary">Primary Button</button>
+    <button class="btn btn-secondary">secondary Button</button>
+    <button class="btn btn-success">Success Button</button>
+    <button class="btn btn-danger">Danger Button</button>
+    <button class="btn btn-warning">Warning Button</button>
+    <button class="btn btn-info">Info Button</button>
+    <button class="btn btn-light">Light Button</button>
+    <button class="btn btn-dark">Dark Button</button>
+    <button type="button" class="btn btn-link">Link</button>
+
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
