Table and forms page created

--- a/index9_forms.html
+++ b/index9_forms.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Homepage</title>
+    <title>Document</title>
     <link
       rel="stylesheet"
       href="node_modules/bootstrap/dist/css/bootstrap.css"
     />
+
+    </style>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
@@ -28,10 +30,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index9_tables.html">Tables</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="index9_forms.html">Forms</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Request Info</a>
@@ -57,15 +59,10 @@
       </div>
     </nav>
 
-    <div class="container border border-5">
-      <div class="row border border-5">
-        <div class="col-sm">My strengths:</div>
-        <div class="col-sm">English and Japanese Language Skills</div>
-      </div>
-    </div>
+
+
 
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
   </body>
 </html>
