Added content to table and form

--- a/index9_tables.html
+++ b/index9_tables.html
@@ -59,9 +59,28 @@
       </div>
     </nav>
 
-
-
-
+    <table class="table table-dark table-hover mt-5">
+      <tr>
+        <th>ID</th>
+        <th>Name</th>
+        <th>Email</th>
+      </tr>
+      <tr>
+        <td>1</td>
+        <td>Sam</td>
+        <td>sam@gmail.com</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Tom</td>
+        <td>tom@gmail.com</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>Sally</td>
+        <td>sally@gmail.com</td>
+      </tr>
+    </table>
     <script src="node_modules/jquery/dist/jquery.js"></script>
     <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>
   </body>
