--- a/index9.html
+++ b/index9.html
@@ -28,10 +28,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+            <a class="nav-link" href="index9_tables.html">Tables</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
+            <a class="nav-link" href="index9_forms.html">Forms</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Request Info</a>
