--- a/index9.html
+++ b/index9.html
@@ -10,6 +10,11 @@
       href="node_modules/bootstrap/dist/css/bootstrap.css"
     />
   </head>
+  <style>
+    div {
+      border: 2px solid black;
+    }
+  </style>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
       <a href="index9.html" class="navbar-brand">Bootstrap Project</a>
