--- a/index9_forms.html
+++ b/index9_forms.html
@@ -60,9 +60,9 @@
     </nav>
 
     <div>
-      <h2>Contact Me! </h2>
+      <h2 class="container">Contact Me! </h2>
     </div>
-    <form>
+    <form class="container">
       <div class="form-group">
         <label for="exampleFormControlInput1">Email address</label>
         <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
